--- a/css/registered_viewer.css
+++ b/css/registered_viewer.css
@@ -31,7 +31,7 @@ body{
     cursor: pointer;
 }
 
-.grid-item-button #btn:hover {
+.grid-item-button .btn:hover {
     cursor: point;
     background-color: #885e43;
     border-radius: 15px 15px;
