--- a/css/registered_viewer.css
+++ b/css/registered_viewer.css
@@ -28,6 +28,7 @@ body{
     background-color: transparent;
     color: white;
     font-size: 15px;
+    /* font-weight: 500; */
     cursor: pointer;
 }
 
